# Project-ACE

./: .clang-format  .gitignore  CMakeLists.txt  IMPORTANT_nomad_calibrator  IMPORTANT_nomad_calibrator.cpp  LICENSE  README.md  guardian.py  main.cpp  main.qml  manifest.txt  resources.qrc  setup_udev.sh  sniffer.py  source_files.txt  tree.txt
cpp/: CMakeLists.txt  main.cpp
cpp/input/: input_selection.cpp  input_selection.h
cpp/src/input/: input_manage.cpp  input_manage.h  input_read.cpp  input_read.h  input_tune.cpp  input_tune.h
cpp/src/logic/: logic.cpp  logic.h  logic2.cpp  logic2.h
cpp/src/shared/: socket.cpp  socket.h
include/: common_constants.h
include/Core/: app_state.h
include/dash/: dashboard_panel.h  input_read_page1.h  input_read_page2.h  input_read_page3.h  input_read_page4.h  input_read_page5.h  input_read_panel.h  main_drone_dash.h  panel_buttons.h  settings_page1.h  settings_page2.h  settings_panel.h
include/dash/input_read/: input_read_page1.h  input_read_page2.h  input_read_page3.h  input_read_page4.h  input_read_page5.h  input_read_panel.h
include/dash/main_dash/: main_car_dash.h  main_drone_dash.h  main_heli_dash.h  main_plane_dash.h  panel_buttons.h
include/dash/settings/: settings_base.h  settings_page1.h  settings_page2.h  settings_panel.h
include/input/: device_state.h  input_manage.h  input_read.h  input_tune.h
include/logic/: logic.h
include/nlohmann/: json.hpp
include/profiles/: profile_manager.h  profile_panel.h
include/protocols/: nomad_daemon_link.h
include/rc_type/: rc_type_page1.h  rc_type_panel.h  rc_type_selector.h
include/theme/: theme.h
include/vehicles/car/: input_tune_car_page1.h  input_tune_car_page2.h  input_tune_car_page3.h  input_tune_car_page4.h  input_tune_car_page5.h  input_tune_car_panel.h  main_car_dash.h  rc_map_car_panel.h  rc_tune_car_page1.h  rc_tune_car_page2.h  rc_tune_car_page3.h  rc_tune_car_page4.h  rc_tune_car_page5.h  rc_tune_car_panel.h
include/vehicles/drone/: input_tune_drone_page1.h  input_tune_drone_page2.h  input_tune_drone_page3.h  input_tune_drone_page4.h  input_tune_drone_page5.h  input_tune_drone_panel.h  main_drone_dash.h  rc_map_drone_panel.h  rc_tune_drone_page1.h  rc_tune_drone_page2.h  rc_tune_drone_page3.h  rc_tune_drone_page4.h  rc_tune_drone_page5.h  rc_tune_drone_panel.h
include/vehicles/heli/: input_tune_heli_page1.h  input_tune_heli_page2.h  input_tune_heli_page3.h  input_tune_heli_page4.h  input_tune_heli_page5.h  input_tune_heli_panel.h  main_heli_dash.h  rc_map_heli_panel.h  rc_tune_heli_page1.h  rc_tune_heli_page2.h  rc_tune_heli_page3.h  rc_tune_heli_page4.h  rc_tune_heli_page5.h  rc_tune_heli_panel.h
include/vehicles/plane/: input_tune_plane.h  input_tune_plane_page1.h  input_tune_plane_page2.h  input_tune_plane_page3.h  input_tune_plane_page4.h  input_tune_plane_page5.h  input_tune_plane_panel.h  main_plane_dash.h  rc_map_plane.h  rc_map_plane_page1.h  rc_map_plane_page2.h  rc_map_plane_page3.h  rc_map_plane_page4.h  rc_map_plane_page5.h  rc_map_plane_panel.h  rc_mix_plane_panel.h  rc_trim_plane.h  rc_trim_plane_panel.h  rc_tune_plane_page1.h  rc_tune_plane_page2.h  rc_tune_plane_page3.h  rc_tune_plane_page4.h  rc_tune_plane_page5.h  rc_tune_plane_panel.h
include/widgets/: button.h  frame.h  gauge.h  keyboard.h  keypad.h  source_selector.h  status_bar.h
include/windows/: mainwindow.h
profiles/: last_session.ptr
profiles/PLANE/: slot_0.json
python/: main.py  settings.json  test_gui.py  theme.py
python/dash/: dashboard.py  dashboard_panel.py  panel_buttons.py  settings.py  settings_page1.py  settings_page2.py  settings_page3.py  settings_page4.py  settings_page5.py
python/effects/: animations.py
python/gui/: dashboard.py  save.py
python/gui/settings/: visual.json
python/input/: input_read.py  input_read_page1.py  input_read_page2.py  input_read_page3.py  input_read_page4.py  input_read_page5.py  input_tune.py  input_tune_page1.py  input_tune_page2.py  input_tune_page3.py  input_tune_page4.py  input_tune_page5.py
python/logic/: logic.py
python/saves/: color_save.py  visual_settings.json
python/shared/: socket.py
python/utils/: exceptions.py  screen_scaling.py  window_setup.py
python/widgets/: button.py  button_mini.py  color_picker.py  frame.py  gauge.py  keyboard.py  keyboard_popout.py  keypad.py  keypad_popout.py  popout.py  signal.py
src/: main.cpp
src/Core/: app_state.cpp  profile_manager.cpp
src/GUI/dash/: dashboard_panel.cpp  input_read_page1.cpp  input_read_page2.cpp  input_read_page3.cpp  input_read_page4.cpp  input_read_page5.cpp  input_read_panel.cpp  main_car_dash.cpp  main_drone_dash.cpp  main_heli_dash.cpp  main_plane_dash.cpp  panel_buttons.cpp  settings_page1.cpp  settings_page2.cpp  settings_panel.cpp
src/GUI/profiles/: profile_panel.cpp
src/input/: input_manage.cpp  input_manage.h  input_read.cpp  input_read.h
src/logic/: logic.cpp  logic.h
src/protocols/: nomad_client.cpp  nomad_daemon_internal.cpp  nomad_daemon_link.cpp
(+216 files in other folders)
